# shuri_bot

./: .gitignore  Cargo.toml  changelog.md
src/: dictionary.rs  last_seen.rs  log_config.rs  main.rs  message_activity.rs  pretty_numbers.rs
src/modules/: dictionary.rs  last_seen.rs  message_activity.rs  mod.rs  most_played_game.rs  ping.rs
src/utils/: mod.rs  pretty_numbers.rs
