[package]
name = "shuri_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11.5", default-features=false, features=["client", "gateway", "rustls_backend", "model", "chrono"]}
tokio = { version="1.0", features=["macros", "rt-multi-thread"]}
serde = { version="1.0", features=["derive"]}
serde_json = { version="1.0"}
reqwest = { version="0.11", features=["json"]}
sqlx = { version="0.6", features=["runtime-tokio-rustls", "postgres", "chrono"]}
chrono = { version = "0.4.23"}
futures= { version="0.3.26" }

## using tracing instead
# log = "0.4"
# fern = "0.6"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"